muchos cambios esteticos a la pagina web

--- a/components/main-page-component/footer-components/footer-ads-component/footerAds.css
+++ b/components/main-page-component/footer-components/footer-ads-component/footerAds.css
@@ -5,7 +5,7 @@
   width: 100%;
   max-width: 1240px;
   margin: auto;
-  background: linear-gradient(180deg, rgb(123, 7, 7), rgb(0, 0, 0));
+  background: linear-(180deg, rgb(123, 7, 7), rgb(0, 0, 0));
 }
 
 .ad-card {
