--- a/components/main-page-component/main-view-components/last-news-card-component/lastNewsCard.css
+++ b/components/main-page-component/main-view-components/last-news-card-component/lastNewsCard.css
@@ -2,11 +2,45 @@
   position: relative;
   overflow: hidden;
   transition: box-shadow 0.3s;
-  /* border-radius: 5px; */
+  border-radius: 10px;
 }
+
+.title-arrows{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.title-arrows > h1{
+  color: white;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+.arrows-box{
+  display: flex;
+  gap: 1rem;
+}
+
+.arrow {
+  color: white;
+  height: 100%;
+  width: 50px;
+
+}
+.arrow:hover{
+color: var(--color-rojo-oscuro);
+cursor: pointer;
+}
+
+
 
 @media (max-width: 1240px) {
   .news-card {
+    display: none;
+  }
+  .title-arrows{
     display: none;
   }
 }
@@ -17,12 +51,12 @@
 }
 
 .news-card__image {
-  height: 500px;
+  width: 100%;
   transition: transform 0.3s;
 }
 
 .news-card:hover .news-card__image {
-  transform: scale(1.2); /* Efecto de zoom */
+  transform: scale(1.1); /* Efecto de zoom */
   cursor: pointer;
 }
 
@@ -30,7 +64,7 @@
   position: absolute;
   bottom: 16px;
   margin: 1rem;
-  font-size: 2.5em;
+  font-size: 2em;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 8px;
@@ -46,7 +80,6 @@
   font-size: 1em;
   color: white;
   background-color: var(--color-rojo);
-  border: 2px solid var(--color-blanco);
   padding: 8px;
   border-radius: 4px;
   transition: background-color 0.3s, font-size 0.3s;
