--- a/components/main-page-component/main-view-components/main-view-container-component/mainViewContainer.css
+++ b/components/main-page-component/main-view-components/main-view-container-component/mainViewContainer.css
@@ -5,9 +5,33 @@
 }
 
 .last-news-card-container {
+  display: flex;
   width: 100%;
+  min-height: 500px;
   background-color: var(--color-gris-oscuro);
+  justify-content: space-between;
 }
+.link-news-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 20%;
+}
+
+.box-container-news{
+  text-align: center;
+  font-size: 50px;
+  padding: 40px;
+  color: white;
+  background-color: var(--color-rojo-oscuro);
+  border-radius: 15px;
+}
+
+.box-container-news:hover{
+  color: var(--color-rojo-oscuro);
+  background-color: var(--color-gris-claro);
+}
+
 
 .sm-news-card-container {
   padding-block: 1rem;
@@ -47,6 +71,21 @@
   padding: .5rem;
 }
 
+.box-links-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 50%;
+  padding: auto;
+}
+.box-links-container > h2 {
+  text-align: center;
+  color: white;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+
 
 @media (max-width: 1240px) {
   .horizontal-ad-container{
@@ -54,6 +93,9 @@
     display: block;
     margin-top: .5rem;
     padding: .5rem;
+  }
+  .link-news-container{
+    display: none;
   }
 }
 @media (max-width: 720px) {
