--- a/components/main-page-component/main-view-components/main-view-container-component/mainViewContainer.css
+++ b/components/main-page-component/main-view-components/main-view-container-component/mainViewContainer.css
@@ -84,6 +84,9 @@
   text-decoration: underline;
   text-underline-offset: 5px;
 }
+.link-news-container-small{
+  display: none;
+}
 
 
 
@@ -94,8 +97,34 @@
     margin-top: .5rem;
     padding: .5rem;
   }
-  .link-news-container{
+  .link-news-container-small{
+    display: flex;
+    width: 100%;
+    margin-bottom: 1rem;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .box-links-container{
+    width: 45%;
+  }
+  .last-news-card-container {
     display: none;
+  }
+  .sm-news-card-container {
+    padding-block: 1rem;
+    margin-block: 2rem;
+    height: auto;
+    display: flex;
+    gap: .5rem;
+    background-color: var(--color-gris-oscuro);
+    overflow-x: scroll;
+  }
+  .normal-news-card {
+    overflow: hidden;
+    transition: box-shadow 0.3s;
+    /* border-radius: 5px; */
+    width: 600px;
+    position: relative;
   }
 }
 @media (max-width: 720px) {
