--- a/components/admin/admin-forms/formStyles.css
+++ b/components/admin/admin-forms/formStyles.css
@@ -1,107 +1,120 @@
 .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  form {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .form-group input,
-  .form-group textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 14px;
-  }
-  
-  .submit-button {
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .submit-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .preview {
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-  }
-  
-  .preview img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin-bottom: 20px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+}
 
-  .form-buttons{
-    width: 100%;
-    display: flex;
-    background-color: white;
-  }
+form {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
 
-  .form-buttons > ul > li {
-    padding: 1rem;
-    border: 1px solid black;
-    margin-inline-start: 2rem;
-    border-radius: 15px;
-    font-size: larger;
-  }
+.form-group {
+  margin-bottom: 15px;
+}
 
-  .loggin{
-    max-width: 400px;
-    color: white;
-  }
-  .loggin > form > button {
-    padding: 1rem;
-    font-weight: bold;
-    padding-inline: 3rem;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 15px;
-  }
-  .loggin > form > button:hover{
-    cursor: pointer;
-    background-color: grey;
-    color: black;
-  }
-  .loggin-box{
-    gap: 1rem;
-    display: flex;
-    color: black;
-    padding: 1rem;
-    font-size: larger;
-  }
-  .loggin-box > input {
-    width: 100%;
-    font-size: larger;
-  }
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.submit-button {
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.close-button{
+  padding: 10px 15px;
+  background-color: var(--color-rojo-oscuro);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 3rem;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+.preview {
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.preview img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.form-buttons {
+  width: 100%;
+  display: flex;
+  background-color: white;
+}
+
+.form-buttons > ul > li {
+  padding: 1rem;
+  border: 1px solid black;
+  margin-inline-start: 2rem;
+  border-radius: 15px;
+  font-size: larger;
+}
+
+.loggin {
+  max-width: 400px;
+  color: white;
+}
+.loggin > form > button {
+  padding: 1rem;
+  font-weight: bold;
+  padding-inline: 3rem;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 15px;
+}
+.loggin > form > button:hover {
+  cursor: pointer;
+  background-color: grey;
+  color: black;
+}
+.loggin-box {
+  gap: 1rem;
+  display: flex;
+  color: black;
+  padding: 1rem;
+  font-size: larger;
+}
+.loggin-box > input {
+  width: 100%;
+  font-size: larger;
+}
+.preview-hide {
+  display: none;
+}
