--- a/components/main-page-component/footer-components/footer-ads-component/footerAds.css
+++ b/components/main-page-component/footer-components/footer-ads-component/footerAds.css
@@ -45,7 +45,7 @@
     gap: 1rem;
     max-width: 720px;
     margin: auto;
-    background: linear-gradient(180deg, rgb(173, 143, 143), rgb(0, 0, 0));
+   background-color: var(--color-rojo-oscuro);
   }
 }
 @media (max-width: 720px) {
@@ -54,6 +54,6 @@
     gap: 1rem;
     max-width: 600px;
     margin: auto;
-    background: linear-gradient(180deg, rgb(173, 143, 143), rgb(0, 0, 0));
+    background: var(--color-rojo-oscuro);
   }
 }
