--- a/components/main-page-component/main-view-components/normal-news-card-component/normalNewsCard.css
+++ b/components/main-page-component/main-view-components/normal-news-card-component/normalNewsCard.css
@@ -30,15 +30,15 @@
     margin: 0;
     font-size: 1em;
     color: white;
-    background: linear-gradient(180deg, rgb(255, 255, 255, 0.05), rgb(143, 5, 5, .8));
-    padding: 5px;
+    background: linear-gradient(180deg, rgba(0, 0, 0), rgb(143, 5, 5, .8));
+    /* background-color: black; */
     color: white;
-    /* border-radius: 4px; */
-    transition: background-color 0.3s, font-size 0.3s;
-    text-decoration: underline;
+   ;padding: .5rem;
+    /* text-decoration: underline; */
     position: absolute;
     width: 100%;
     bottom: 0px;
+    min-height: 20%;
   }
   .normal-news-card__type{
     background-color: var(--color-rojo);
