--- a/components/main-page-component/main-view-components/normal-news-card-component/normalNewsCard.css
+++ b/components/main-page-component/main-view-components/normal-news-card-component/normalNewsCard.css
@@ -30,7 +30,7 @@
     margin: 0;
     font-size: 1em;
     color: white;
-    background: linear-gradient(180deg, rgba(0, 0, 0), rgb(143, 5, 5, .8));
+    background: linear-gradient(180deg, rgba(0, 0, 0), rgb(143, 5, 5));
     /* background-color: black; */
     color: white;
    ;padding: .5rem;
