--- a/components/all-news-component/allNewsCard.css
+++ b/components/all-news-component/allNewsCard.css
@@ -49,5 +49,34 @@ a {
     .all-news-card * p {
         display: none;
     }
+    .news-card{
+        width: 100%;
+        max-height: 450px;
+        background-color: var(--color-rojo-oscuro);
+        overflow: hidden;
+    }
+    .news-card__title{
+        display: block;
+        position: inherit;
+        background-color: var(--color-rojo-oscuro);
+    }
+    .news-card:hover .news-card__title {
+        background-color: var(--color-rojo-oscuro); 
+        font-size: 2em;
+      }
+    .news-card * img{
+        height: 250px;
+    }
+
+  }
+
+  @media (max-width: 1240px){
+      .title-arrows{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        font-size: .5rem;
+        text-decoration: none;
+      }
 
   }
