--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,11 @@ body{
     max-width: 1240px;
     margin: auto;
     background-color: #333;
-    min-width: 540px;
 }
 
 @media (max-width: 1240px) {
     .app{
-        max-width: 500px;
+        width: 400px;
         margin: auto;
         background-color: #333;
     }
