--- a/components/main-page-component/footer-components/footer-ads-component/footerAds.css
+++ b/components/main-page-component/footer-components/footer-ads-component/footerAds.css
@@ -1,4 +1,5 @@
 .ad-carousel {
+  border-radius: 15px;
   display: flex;
   justify-content: space-around;
   gap: 1rem;
@@ -9,7 +10,6 @@
 }
 
 .ad-card {
-  margin: .5rem;
   display: block;
   position: relative;
   text-decoration: none;
@@ -20,13 +20,14 @@
 }
 
 .ad-card__image-container {
+  max-height: 120px;
   position: relative;
   overflow: hidden;
 }
 
 .ad-card__image {
   width: 100%;
-  height: 150px;
+  height: 120px;
   display: block;
   transition: opacity 0.3s;
 }
