--- a/components/partidos-patronato-page-component/container-historial-partidos/historialPartidos.css
+++ b/components/partidos-patronato-page-component/container-historial-partidos/historialPartidos.css
@@ -1,25 +1,19 @@
 .card {
     width: 100%;
     max-width: 600px;
-    background-color: white;
+    color: white;
     max-height: 100%;
     overflow: hidden;
     box-sizing: border-box;
   }
 
-  .border-red{
-    border: 3px solid rgb(108, 6, 6);
-  }
-  .border-green{
-    border: 3px solid rgb(19, 201, 16);
-  }
-  .border-yellow{
-    border: 3px solid rgb(171, 161, 27);
-  }
 
   .content-teams{
     display: flex;
     justify-content: space-between;
+    background-color: var(--color-rojo-oscuro);
+    padding: .5rem;
+    border-radius: 15px;
   }
 
   .content-teams > div {
@@ -31,6 +25,8 @@
   .card-body {
     background-color: white;
     padding: 20px;
+    background-image: url('../../../dist/CPportada2.png');
+    font-size: larger;
   }
   
   .card-title {
@@ -40,8 +36,9 @@
   }
   
   .text-muted {
-    color: #888;
-    font-size: 0.9rem;
+    /* background-color: var(--color-rojo-oscuro); */
+    color: white;
+    font-size: 1.1rem;
     margin: 0px;
   }
   
@@ -105,6 +102,7 @@
   }
 
   .goal-details{
+    font-weight: bold;
     display: flex;
     justify-content: space-between;
     padding-inline: 1rem;
