--- a/components/partidos-patronato-page-component/main-container-partidos-page/partidosView.css
+++ b/components/partidos-patronato-page-component/main-container-partidos-page/partidosView.css
@@ -6,6 +6,7 @@
 }
 
 .partidos-pasados-container {
+  
   margin-inline-start: .5rem;
   display: flex;
   flex-direction: column;
@@ -35,6 +36,7 @@
 }
 
 .partido-proximo-container {
+  background-image: url('../../../dist/CPportada2.png');
   background-color: white;
   width: 50%;
   height: full;
