cambios con respecto al titulo de la pagina y primeros test de open graph

--- a/components/all-news-component/allNewsCard.css
+++ b/components/all-news-component/allNewsCard.css
@@ -48,7 +48,7 @@ a {
     justify-content: space-between;
     padding: 1rem;
     border-radius: 15px;
-    background-image: url('../../../dist/CPportada2.png');
+    background-image: url('https://i.postimg.cc/W3yGdVV5/CPportada.png');
 
   }
   .pagination-controls > button {
